force-app/main/default/objects/IndividualApplication/fields/nepa_ec_multi_dod__c.field-meta.xml
<CustomField>
    <fullName>nepa_ec_multi_dod__c</fullName>
    <description>Set to true by the CE Intake OmniScript when the project sector is Military and the project affects more than one DoD installation. Triggers additional extraordinary circumstances screening in NEPA_CE_Screener. Stage 16 finding: Military sector carries 1.65x federal friction multiplier driven by NHPA Section 106 multi-installation coordination — detectable at intake.</description>
    <defaultValue>false</defaultValue>
    <label>EC: Multiple DoD Installations</label>
    <type>Checkbox</type>
</CustomField>