force-app/main/default/objects/IndividualApplication/fields/nepa_ec_usace_czma__c.field-meta.xml
<CustomField>
    <fullName>nepa_ec_usace_czma__c</fullName>
    <description>Set to true by the CE Intake OmniScript when the project sector is Water/Coastal and the project crosses jurisdictional waters. Triggers USACE Section 404 and CZMA federal consistency pre-consultation flags in NEPA_CE_Screener. Stage 16 finding: Water/Coastal sector carries 1.47x federal friction multiplier driven by CZMA consistency, EFH Magnuson-Stevens, and dual-track 404 review.</description>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when the project crosses jurisdictional waters or the coastal zone. Triggers USACE Section 404 and CZMA federal consistency pre-consultation flags. Water/Coastal projects with this flag carry a 1.47× federal review friction multiplier driven by CZMA consistency + EFH Magnuson-Stevens dual-track review.</inlineHelpText>
    <label>EC: USACE Section 404 / CZMA</label>
    <type>Checkbox</type>
</CustomField>