force-app/main/default/objects/IndividualApplication/fields/nepa_esa_consultation_status__c.field-meta.xml
<CustomField><fullName>nepa_esa_consultation_status__c</fullName>
        <description>Status of ESA Section 7 consultation for this process. VR-004 (implemented as a Stage Gate extension) blocks FONSI/ROD stage advancement until this field is set to a terminal status. Required for EA/EIS processes where the project area intersects listed species range.</description>
        <inlineHelpText>ESA Section 7 consultation status. Must reach a terminal status before FONSI or ROD can be issued.</inlineHelpText>
        <label>ESA Section 7 Consultation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Not Required</fullName><default>false</default><label>Not Required (documented)</label></value>
                <value><fullName>No Effect</fullName><default>false</default><label>No Effect (documented)</label></value>
                <value><fullName>May Affect - Initiated</fullName><default>false</default><label>May Affect — Consultation Initiated</label></value>
                <value><fullName>Concurrence Received</fullName><default>false</default><label>Concurrence Received (informal)</label></value>
                <value><fullName>Biological Opinion Issued</fullName><default>false</default><label>Biological Opinion Issued (formal)</label></value>
                <value><fullName>Reinitiated</fullName><default>false</default><label>Reinitiated</label></value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>