force-app/main/default/objects/IndividualApplication/fields/nepa_estimated_completion_date__c.field-meta.xml
<CustomField><fullName>nepa_estimated_completion_date__c</fullName>
        <description>Projected completion date based on current process stage, days-in-stage, and review-type baseline. Calculated by NEPA_Timeline_Risk_Assessor Flow. Updated whenever stage or risk tier changes.</description>
        <inlineHelpText>Projected completion date based on current pace and review type baseline. Updated automatically.</inlineHelpText>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </CustomField>