force-app/main/default/objects/IndividualApplication/fields/nepa_extraordinary_circumstances__c.field-meta.xml
<CustomField><fullName>nepa_extraordinary_circumstances__c</fullName>
        <description>Semicolon-delimited list of GIS-flagged extraordinary circumstances present at the project site (e.g., ESA Critical Habitat; Wetlands; Tribal Lands; Floodplain). Any value disqualifies CE and downgrades to EA per CEQ regulations.</description>
        <inlineHelpText>GIS-flagged extraordinary circumstances (e.g., ESA Critical Habitat; Wetlands). Any flag disqualifies CE.</inlineHelpText>
        <label>Extraordinary Circumstances</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>