force-app/main/default/objects/IndividualApplication/fields/nepa_fra_statutory_deadline__c.field-meta.xml
<CustomField><fullName>nepa_fra_statutory_deadline__c</fullName>
        <description>Hard FRA statutory deadline: nepa_start_date__c + 365 days for EA, + 730 days for EIS, per 42 U.S.C. 4336a. This is a legal constraint, not a project management guideline. Set by NEPA_SLA_Due_Date_Setter alongside nepa_sla_due_date__c. Stored separately from the SLA due date so that clock-pause extensions are visible without overwriting the original statutory date.</description>
        <inlineHelpText>FRA hard deadline: 1 year (EA) or 2 years (EIS) from start date. Cannot be extended without project sponsor agreement per 42 U.S.C. 4336a(b).</inlineHelpText>
        <label>FRA Statutory Deadline</label>
        <type>Date</type>
    </CustomField>