force-app/main/default/objects/IndividualApplication/fields/nepa_fuds_flag__c.field-meta.xml
<CustomField>
    <fullName>nepa_fuds_flag__c</fullName>
    <description>Set to true by NEPA_GIS_Proximity_Check when the project location intersects a USACE Formerly Used Defense Sites (FUDS) Munitions Response Site. Triggers RCRA and/or CERCLA hazardous waste review requirement and Army Corps coordination. Projects near FUDS sites may face remediation obligations before construction can proceed. Source: USACE FUDS FeatureServer.</description>
    <inlineHelpText>Project intersects a USACE Formerly Used Defense Site (FUDS) with munitions or hazardous waste. RCRA/CERCLA review and Army Corps coordination required.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>USACE FUDS Hazardous Site Flag</label>
    <type>Checkbox</type>
</CustomField>