force-app/main/default/objects/IndividualApplication/fields/nepa_litigation_ai_confidence__c.field-meta.xml
<CustomField><fullName>nepa_litigation_ai_confidence__c</fullName>
        <description>AI confidence score (0–100%) for the litigation risk score computed by NEPA_Litigation_Risk_Scorer. Reflects the fraction of the four scoring factors (review type, agency, circuit, adjacent statutes) that resolved to explicit CMT records rather than defaults. 100% = all four factors matched explicit records. Required by OMB M-24-10: structured confidence metadata must accompany all AI-scored risk outputs.</description>
        <inlineHelpText>Confidence in litigation risk score. Lower values mean more scoring factors fell back to defaults.</inlineHelpText>
        <label>Litigation Risk AI Confidence</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </CustomField>