force-app/main/default/objects/IndividualApplication/fields/nepa_litigation_risk_cell_label__c.field-meta.xml
<CustomField><fullName>nepa_litigation_risk_cell_label__c</fullName>
        <description>Risk classification for the sector-circuit cell from NEPA_Sector_Circuit_Risk__mdt. HIGH = agency win rate below 45%; MODERATE = 45–70%; LOW = above 70%. Set alongside nepa_sector_circuit_win_rate__c.</description>
        <inlineHelpText>Risk level for this project's sector and circuit combination based on historical litigation outcomes.</inlineHelpText>
        <label>Litigation Risk Cell Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>MODERATE</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>