force-app/main/default/objects/IndividualApplication/fields/nepa_missing_documents__c.field-meta.xml
<CustomField><fullName>nepa_missing_documents__c</fullName>
        <description>Semicolon-delimited list of required document types not yet present at Approved or Published status. Written by NEPA_Administrative_Record_Checker Flow. Used in stage-gate blocking logic and displayed on the record page.</description>
        <inlineHelpText>Required documents not yet uploaded or approved. Blocks final stage gates when populated.</inlineHelpText>
        <label>Missing Documents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>