force-app/main/default/objects/IndividualApplication/fields/nepa_notes__c.field-meta.xml
<CustomField><fullName>nepa_notes__c</fullName>
        <description>Additional notes or context for this process not captured by other fields.</description>
        <inlineHelpText>Additional notes or context for this process.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>