force-app/main/default/objects/IndividualApplication/fields/nepa_pages_missing__c.field-meta.xml
<CustomField><fullName>nepa_pages_missing__c</fullName>
        <description>True when nepa_total_pages__c is blank. Surfaced on record page and in list views as a data-quality checklist flag. Auto-populating from ContentVersion attachment count is a future enhancement.</description>
        <inlineHelpText>Page count not yet entered. Enter total pages to improve CE screening accuracy.</inlineHelpText>
        <formula>ISBLANK(nepa_total_pages__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page Count Missing</label>
        <type>Checkbox</type>
    </CustomField>