force-app/main/default/objects/IndividualApplication/fields/nepa_parent_process__c.field-meta.xml
<CustomField><fullName>nepa_parent_process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Process ID of parent process (e.g., an earlier NEPA process that resulted in a programmatic analysis the agency is tiering from).</description>
        <inlineHelpText>Parent process for nested or tiered NEPA reviews.</inlineHelpText>
        <label>Parent Process</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Child Processes</relationshipLabel>
        <relationshipName>Child_Processes</relationshipName>
        <type>Lookup</type>
    </CustomField>