force-app/main/default/objects/IndividualApplication/fields/nepa_plaintiff_risk_flag__c.field-meta.xml
<CustomField><fullName>nepa_plaintiff_risk_flag__c</fullName>
        <description>Set to true by NEPA_Plaintiff_Intelligence Flow when a PublicComplaint linked to this application is submitted by an organization matching a HIGH or VERY_HIGH record in NEPA_Plaintiff_Profile__mdt. Triggers a Legal Defensibility Review task and increases the litigation risk score by 25 points (PLAINTIFF_RISK_BONUS).</description>
        <inlineHelpText>Known high-risk plaintiff organization has submitted a comment on this process. See Legal Defensibility Review task for details.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Plaintiff Risk Flag</label>
        <type>Checkbox</type>
    </CustomField>