force-app/main/default/objects/IndividualApplication/fields/nepa_polygon__c.field-meta.xml
<CustomField><fullName>nepa_polygon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSS Polygon record holding the GeoJSON/KML process area geometry. May differ from the parent project polygon when the process has a more specific geographic scope. Supports MFR #6 (Integrated GIS Analysis Tools).</description>
        <inlineHelpText>Process-level boundary polygon (PSS Polygon object). Links to GIS Data Element records.</inlineHelpText>
        <label>Process Area Polygon</label>
        <referenceTo>Polygon</referenceTo>
        <relationshipLabel>Individual Applications</relationshipLabel>
        <relationshipName>Individual_Applications_Polygon</relationshipName>
        <type>Lookup</type>
    </CustomField>