force-app/main/default/objects/IndividualApplication/fields/nepa_portal_comment_intake_open__c.field-meta.xml
<CustomField><fullName>nepa_portal_comment_intake_open__c</fullName>
        <description>Formula checkbox: true when NOW() is between nepa_public_comment_period_start__c and nepa_public_comment_period_end_date__c. Drives portal OmniScript conditional visibility and CMS page visibility rules without human admin intervention. Recomputed on every page load — no async lag.</description>
        <inlineHelpText>Portal comment intake is open when checked. Automatically closes at the exact end datetime — no manual toggle needed.</inlineHelpText>
        <formula>AND(
  NOT(ISBLANK(nepa_public_comment_period_start__c)),
  NOT(ISBLANK(nepa_public_comment_period_end_date__c)),
  NOW() &gt;= nepa_public_comment_period_start__c,
  NOW() &lt; nepa_public_comment_period_end_date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Comment Intake Open</label>
        <type>Checkbox</type>
    </CustomField>