force-app/main/default/objects/IndividualApplication/fields/nepa_predicted_challenge_grounds__c.field-meta.xml
<CustomField><fullName>nepa_predicted_challenge_grounds__c</fullName>
        <description>Semicolon-delimited list of predicted NEPA challenge grounds ordered by likelihood, derived from project attributes and PermitTEC patterns.</description>
        <inlineHelpText>Predicted challenge grounds (e.g., EIS/EA Inadequacy; Failure to Supplement).</inlineHelpText>
        <label>Predicted Challenge Grounds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>