force-app/main/default/objects/IndividualApplication/fields/nepa_prior_nepa_date__c.field-meta.xml
<CustomField><fullName>nepa_prior_nepa_date__c</fullName>
        <description>Date of the prior NEPA document that this process tiers from or supplements. Used by VR-006 to check whether the prior EIS is older than 5 years (1,825 days), requiring a documented supplementation review per 40 CFR 1502.9(c).</description>
        <inlineHelpText>Date of the prior NEPA document being tiered from. If more than 5 years old, a supplementation review determination is required.</inlineHelpText>
        <label>Prior NEPA Document Date</label>
        <type>Date</type>
    </CustomField>