force-app/main/default/objects/IndividualApplication/fields/nepa_process_code__c.field-meta.xml
<CustomField><fullName>nepa_process_code__c</fullName>
        <description>Code identifying the process instance (e.g., the categorical exclusion code pursuant to which the determination was made).</description>
        <inlineHelpText>Short code identifying this process instance (e.g., CE code).</inlineHelpText>
        <label>Process Code</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>