force-app/main/default/objects/IndividualApplication/fields/nepa_process_model_id__c.field-meta.xml
<CustomField><fullName>nepa_process_model_id__c</fullName>
        <description>DeveloperName of the NEPA_Process_Model__mdt record governing this process. Stored as Text because Custom Metadata Types cannot be Lookup targets from custom objects. Maps to the CEQ standard process_instance.process_model foreign key.</description>
        <inlineHelpText>DeveloperName of the governing process model (e.g., EIS_Standard, CE_BLM).</inlineHelpText>
        <label>Process Model ID</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>