force-app/main/default/objects/IndividualApplication/fields/nepa_process_status__c.field-meta.xml
<CustomField><fullName>nepa_process_status__c</fullName>
        <description>Structured status of the NEPA review process per CEQ standard. Use Process Stage for narrative description.</description>
        <inlineHelpText>Structured status: planned, pre-application, underway, in progress, paused, completed, or cancelled. "underway" is the PIC v1.2 standard value; "in progress" is retained for existing records.</inlineHelpText>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>planned</fullName>
                </value>
                <value>
                    <fullName>pre-application</fullName>
                </value>
                <value>
                    <fullName>in progress</fullName>
                </value>
                <value>
                    <fullName>underway</fullName>
                </value>
                <value>
                    <fullName>paused</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>