force-app/main/default/objects/IndividualApplication/fields/nepa_processing_status__c.field-meta.xml
<CustomField><fullName>nepa_processing_status__c</fullName>
        <description>System-managed lifecycle indicator surfaced on the Experience Cloud portal. Set by automation at each processing stage: Pending GIS when the record is created and GIS proximity check is queued; Pending CE Screening when GIS completes and CE screener is queued; Ready for Review when CE screening recommendation is written; Error when any automated step fails. Allows coordinators and applicants to see where the application is in the automated pipeline without accessing internal Salesforce records.</description>
        <inlineHelpText>Current automated processing stage. Set by workflow — do not edit manually.</inlineHelpText>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending GIS</fullName>
                </value>
                <value>
                    <fullName>Pending CE Screening</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>