force-app/main/default/objects/IndividualApplication/fields/nepa_project_sector__c.field-meta.xml
<CustomField>
    <fullName>nepa_project_sector__c</fullName>
    <description>Primary project sector used to look up the Sector x Circuit risk cell in NEPA_Sector_Circuit_Risk__mdt. Drives the sector-circuit penalty in the v2 Litigation Risk Scorer. Source: Stage 13 sector classification from PermitTEC v0.1 (761 cases).</description>
    <inlineHelpText>Select the primary sector for this project. Used with Circuit to look up litigation risk cell.</inlineHelpText>
    <label>Project Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Energy</fullName><default>false</default><label>Energy</label></value>
            <value><fullName>Transportation</fullName><default>false</default><label>Transportation</label></value>
            <value><fullName>Agriculture</fullName><default>false</default><label>Agriculture</label></value>
            <value><fullName>Mining</fullName><default>false</default><label>Mining</label></value>
            <value><fullName>Water/Coastal</fullName><default>false</default><label>Water/Coastal</label></value>
            <value><fullName>Public Lands</fullName><default>false</default><label>Public Lands</label></value>
            <value><fullName>Wildlife</fullName><default>false</default><label>Wildlife</label></value>
            <value><fullName>Military</fullName><default>false</default><label>Military</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>